--- a/sections/evaluacion-interna.tex
+++ b/sections/evaluacion-interna.tex
@@ -1,13 +1,13 @@
-\section{Evaluación Interna -- Perfil de Capacidad Interna (PCI)}
+\subsection{Evaluación Interna -- Perfil de Capacidad Interna (PCI)}
 \label{sec:evaluacion_interna}
 
-\subsection{Marco Metodológico PCI}
+\subsubsection{Marco Metodológico PCI}
 
 El Perfil de Capacidad Interna (PCI) es una herramienta de diagnóstico estratégico que permite evaluar sistemáticamente las fortalezas y debilidades organizacionales a través del análisis de capacidades, recursos y competencias internas. Este análisis facilita la identificación de ventajas competitivas sostenibles y áreas de mejora críticas para el desempeño organizacional \autocite{barney1991}.
 
 La metodología PCI se fundamenta en la teoría de recursos y capacidades, que sostiene que las ventajas competitivas duraderas provienen de recursos internos valiosos, raros, difíciles de imitar y debidamente organizados. Para MercadoLibre, este análisis es crucial dado su modelo de negocio que integra tecnología, servicios financieros y operaciones logísticas a escala latinoamericana \autocite{teece2007}.
 
-\subsection{Unidades de Análisis PCI}
+\subsubsection{Unidades de Análisis PCI}
 
 Para la evaluación interna de MercadoLibre se han identificado ocho unidades de análisis que representan las capacidades organizacionales críticas:
 
@@ -29,75 +29,121 @@ Para la evaluación interna de MercadoLibre se han identificado ocho unidades de
 \item \textbf{Relación con Clientes}: Programas de fidelización, calidad del soporte técnico, gestión de feedback y experiencia del usuario.
 \end{enumerate}
 
-\subsection{Variables por Unidad de Análisis}
+\subsubsection{Variables por Unidad de Análisis}
 
 \subsubsection{Recursos Humanos}
+
+La gestión de recursos humanos constituye un factor crítico para MercadoLibre, especialmente considerando la alta demanda de talento tecnológico especializado en el mercado latinoamericano.
+
 \begin{itemize}
-\item Programas de capacitación técnica y desarrollo profesional
-\item Tasas de retención de talento clave
-\item Clima organizacional y satisfacción laboral
-\item Cultura de innovación y colaboración
+\item \textbf{Programas de Capacitación Técnica y Desarrollo Profesional}: Evalúa la robustez y efectividad de los programas internos de formación continua, certificaciones técnicas y desarrollo de competencias digitales. Incluye inversión en educación formal, bootcamps internos y programas de mentoring que permiten mantener al equipo actualizado con las últimas tecnologías y metodologías.
+
+\item \textbf{Tasas de Retención de Talento Clave}: Analiza la capacidad organizacional para retener profesionales críticos, especialmente en áreas de ingeniería, ciencia de datos, seguridad informática y desarrollo de productos. Considera factores como satisfacción laboral, compensación competitiva y oportunidades de crecimiento profesional.
+
+\item \textbf{Clima Organizacional y Satisfacción Laboral}: Mide el ambiente de trabajo, cultura corporativa, nivel de engagement de los empleados y percepción de liderazgo. Incluye métricas como índices de satisfacción laboral, encuestas de clima organizacional y evaluaciones de cultura corporativa.
+
+\item \textbf{Cultura de Innovación y Colaboración}: Evalúa el grado en que la organización fomenta la experimentación, el aprendizaje de fallos, la colaboración cross-funcional y la generación de ideas innovadoras. Considera programas internos de innovación, hackathons y espacios para la creatividad empresarial.
 \end{itemize}
 
 \subsubsection{Tecnología y Sistemas}
+
+Como empresa de base tecnológica, las capacidades en tecnología y sistemas constituyen el núcleo de las ventajas competitivas de MercadoLibre.
+
 \begin{itemize}
-\item Nivel de automatización de procesos críticos
-\item Sistemas de seguridad informática y prevención de fraude
-\item Escalabilidad de infraestructura tecnológica
-\item Capacidades de integración con sistemas externos
+\item \textbf{Nivel de Automatización de Procesos Críticos}: Analiza el grado de automatización en procesos core como gestión de inventario, procesamiento de pagos, detección de fraude, recomendaciones de productos y gestión logística. Evalúa la eficiencia operacional y capacidad de escalabilidad sin incremento proporcional de costos.
+
+\item \textbf{Sistemas de Seguridad Informática y Prevención de Fraude}: Examina la robustez de la infraestructura de ciberseguridad, sistemas de detección y prevención de fraude, protección de datos personales y cumplimiento de estándares internacionales como PCI DSS para manejo de información financiera.
+
+\item \textbf{Escalabilidad de Infraestructura Tecnológica}: Evalúa la capacidad de la arquitectura tecnológica para soportar crecimiento exponencial en transacciones, usuarios concurrentes y volumen de datos sin degradación de performance. Incluye arquitectura de microservicios, capacidad de procesamiento distribuido y elasticidad de la infraestructura cloud.
+
+\item \textbf{Capacidades de Integración con Sistemas Externos}: Analiza la facilidad y eficiencia para integrarse con sistemas de terceros como bancos, transportadoras, proveedores de pagos, sistemas ERP de vendedores y APIs de servicios complementarios.
 \end{itemize}
 
 \subsubsection{Capacidades Financieras}
+
+Las capacidades financieras determinan la solidez económica y la capacidad de inversión sostenida en crecimiento e innovación.
+
 \begin{itemize}
-\item Índices de liquidez y solvencia
-\item Márgenes de rentabilidad (EBITDA, ROE, ROA)
-\item Acceso a financiamiento y mercados de capital
-\item Gestión de riesgos financieros y cambiarios
+\item \textbf{Índices de Liquidez y Solvencia}: Evalúa la salud financiera a través de métricas como liquidez corriente, prueba ácida, cobertura de deuda y estructura de capital. Analiza la capacidad para cumplir obligaciones de corto y largo plazo mientras mantiene flexibilidad financiera para inversiones estratégicas.
+
+\item \textbf{Márgenes de Rentabilidad (EBITDA, ROE, ROA)}: Examina la eficiencia en la generación de valor a través de márgenes operativos, EBITDA, retorno sobre patrimonio y retorno sobre activos. Considera la evolución de la rentabilidad y comparación con benchmarks del sector.
+
+\item \textbf{Acceso a Financiamiento y Mercados de Capital}: Analiza la capacidad para acceder a fuentes de financiamiento diversificadas, incluyendo mercados de capital, financiamiento bancario, bonos corporativos y capacidad de generar flujo de caja libre para autofinanciar crecimiento.
+
+\item \textbf{Gestión de Riesgos Financieros y Cambiarios}: Evalúa los sistemas de gestión de riesgos financieros, incluyendo exposición cambiaria por operaciones en múltiples países, riesgo crediticio en servicios financieros y gestión de liquidez en diferentes monedas.
 \end{itemize}
 
 \subsubsection{Procesos Operativos}
+
+Los procesos operativos determinan la eficiencia en la ejecución del modelo de negocio y la calidad de la experiencia del usuario.
+
 \begin{itemize}
-\item Eficiencia en procesamiento de transacciones
-\item Calidad del servicio logístico (tiempos de entrega)
-\item Sistemas de gestión de riesgos operacionales
-\item Optimización de costos operativos
+\item \textbf{Eficiencia en Procesamiento de Transacciones}: Mide la velocidad, precisión y costo de procesamiento de transacciones comerciales y financieras. Incluye métricas como tiempo de respuesta, tasa de éxito de transacciones y costo por transacción procesada.
+
+\item \textbf{Calidad del Servicio Logístico (Tiempos de Entrega)}: Evalúa el desempeño de la red logística de Mercado Envíos, incluyendo tiempos de entrega, tasa de entregas exitosas, gestión de devoluciones y satisfacción del cliente con el servicio logístico.
+
+\item \textbf{Sistemas de Gestión de Riesgos Operacionales}: Analiza los mecanismos para identificar, evaluar y mitigar riesgos operativos como fallas de sistemas, interrupciones de servicio, errores de proceso y contingencias operacionales.
+
+\item \textbf{Optimización de Costos Operativos}: Examina la eficiencia en la gestión de costos operativos, incluyendo optimización de procesos, automatización de tareas repetitivas y gestión eficiente de recursos para mantener márgenes competitivos.
 \end{itemize}
 
 \subsubsection{Marketing y Ventas}
+
+Las capacidades de marketing y ventas determinan la efectividad en la adquisición, retención y monetización de usuarios en el ecosistema.
+
 \begin{itemize}
-\item Participación de mercado en segmentos clave
-\item Net Promoter Score (NPS) y satisfacción del cliente
-\item Efectividad de marketing digital y adquisición de usuarios
-\item Fortaleza de marca y reconocimiento regional
+\item \textbf{Participación de Mercado en Segmentos Clave}: Evalúa la posición competitiva en diferentes categorías de productos, segmentos demográficos y mercados geográficos. Analiza la evolución de market share y penetración en segmentos estratégicos.
+
+\item \textbf{Net Promoter Score (NPS) y Satisfacción del Cliente}: Mide la lealtad de los usuarios y su disposición a recomendar la plataforma. Incluye métricas de satisfacción del cliente, tasas de churn y lifetime value de usuarios.
+
+\item \textbf{Efectividad de Marketing Digital y Adquisición de Usuarios}: Analiza la eficiencia de los canales de marketing digital, costo de adquisición de clientes (CAC), retorno sobre inversión en marketing (ROAS) y efectividad de campañas de performance marketing.
+
+\item \textbf{Fortaleza de Marca y Reconocimiento Regional}: Evalúa el valor de la marca MercadoLibre, reconocimiento espontáneo y asistido, asociaciones de marca y posicionamiento versus competidores en los mercados objetivo.
 \end{itemize}
 
 \subsubsection{Gestión de Proveedores}
+
+La gestión eficiente de proveedores es crucial para mantener la calidad del ecosistema y optimizar costos operativos.
+
 \begin{itemize}
-\item Evaluación de calidad de proveedores estratégicos
-\item Relaciones de largo plazo con vendedores
-\item Gestión de costos y eficiencia de negociación
-\item Diversificación de la base de proveedores
+\item \textbf{Evaluación de Calidad de Proveedores Estratégicos}: Analiza los mecanismos de evaluación y monitoreo de proveedores críticos como servicios de cloud computing, proveedores logísticos, servicios de pago y socios tecnológicos clave.
+
+\item \textbf{Relaciones de Largo Plazo con Vendedores}: Evalúa la gestión de la relación con vendedores en la plataforma, incluyendo programas de desarrollo de vendedores, herramientas de gestión y servicios de valor agregado que fortalecen el ecosistema.
+
+\item \textbf{Gestión de Costos y Eficiencia de Negociación}: Examina la capacidad para negociar términos favorables con proveedores, optimizar costos de servicios y mantener relaciones comerciales que generen valor mutuo.
+
+\item \textbf{Diversificación de la Base de Proveedores}: Analiza el nivel de dependencia de proveedores específicos y las estrategias de diversificación para mitigar riesgos de concentración y asegurar continuidad operacional.
 \end{itemize}
 
 \subsubsection{Innovación y Desarrollo}
+
+Las capacidades de innovación determinan la capacidad de MercadoLibre para mantener liderazgo tecnológico y desarrollar nuevos productos y servicios.
+
 \begin{itemize}
-\item Capacidad de desarrollo de nuevos productos
-\item Inversión en investigación y desarrollo
-\item Proyectos de innovación tecnológica en curso
-\item Velocidad de time-to-market para nuevas funcionalidades
+\item \textbf{Capacidad de Desarrollo de Nuevos Productos}: Evalúa la efectividad del proceso de innovación, desde la ideación hasta el lanzamiento de nuevos productos y servicios. Incluye metodologías de desarrollo ágil, testing de mercado y capacidad de iteración rápida.
+
+\item \textbf{Inversión en Investigación y Desarrollo}: Analiza el nivel de inversión en I+D como porcentaje de ingresos, calidad de los proyectos de investigación y alineación de la inversión en I+D con objetivos estratégicos de largo plazo.
+
+\item \textbf{Proyectos de Innovación Tecnológica en Curso}: Examina la cartera de proyectos de innovación, incluyendo inteligencia artificial, machine learning, blockchain, y otras tecnologías emergentes que pueden generar ventajas competitivas futuras.
+
+\item \textbf{Velocidad de Time-to-Market para Nuevas Funcionalidades}: Mide la agilidad organizacional para llevar nuevas funcionalidades desde la concepción hasta el mercado, incluyendo procesos de desarrollo, testing y deployment.
 \end{itemize}
 
 \subsubsection{Relación con Clientes}
+
+La gestión de la relación con clientes determina la capacidad de generar valor de largo plazo y construir lealtad en el ecosistema.
+
 \begin{itemize}
-\item Programas de fidelización y retención
-\item Calidad del soporte técnico y atención al cliente
-\item Sistemas de gestión de feedback y mejora continua
-\item Personalización de la experiencia del usuario
+\item \textbf{Programas de Fidelización y Retención}: Evalúa la efectividad de programas como Mercado Puntos, beneficios para usuarios frecuentes y estrategias de retención que aumentan el lifetime value de los clientes.
+
+\item \textbf{Calidad del Soporte Técnico y Atención al Cliente}: Analiza la eficiencia y calidad del servicio de atención al cliente, incluyendo tiempos de respuesta, tasa de resolución en primer contacto y satisfacción con el soporte recibido.
+
+\item \textbf{Sistemas de Gestión de Feedback y Mejora Continua}: Examina los mecanismos para capturar, analizar y actuar sobre el feedback de usuarios, incluyendo sistemas de reputación, surveys y análisis de sentimiento.
+
+\item \textbf{Personalización de la Experiencia del Usuario}: Evalúa las capacidades de personalización de la plataforma, incluyendo recomendaciones de productos, contenido personalizado y experiencias adaptadas a los comportamientos y preferencias individuales de los usuarios.
 \end{itemize}
 
-\subsection{Metodología de Evaluación}
-
-\subsection{Metodología de Evaluación PCI}
+\subsubsection{Metodología de Evaluación PCI}
 
 La evaluación se realiza mediante la asignación de valores de importancia (1--5) e impacto interno ($-3$ a $+3$) para cada variable:
 
@@ -108,7 +154,7 @@ La evaluación se realiza mediante la asignación de valores de importancia (1--
 
 La evaluación ponderada se calcula multiplicando la importancia por el impacto para cada variable analizada.
 
-\subsection{Matriz PCI -- Perfil de Capacidad Interna}
+\subsubsection{Matriz PCI -- Perfil de Capacidad Interna}
 
 \footnotesize
 \begin{longtable}{|p{2.2cm}|p{2.8cm}|c|c|c|c|c|c|c|c|c|c|}
@@ -134,82 +180,83 @@ La evaluación ponderada se calcula multiplicando la importancia por el impacto 
 \hline
 \endlastfoot
 \multirow{4}{*}{\makecell{Recursos\\Humanos}} 
-& Capacitación y Desarrollo & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Capacitación y Desarrollo & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Retención de Talento & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Retención de Talento & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \cline{2-12}
-& Clima Organizacional & 4 & 3 & 12 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Clima Organizacional & 4 & 3 & 12 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Cultura de Innovación & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Cultura de Innovación & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \hline
 \multirow{4}{*}{\makecell{Tecnología\\y Sistemas}} 
-& Automatización & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Automatización & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Seguridad Informática & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Seguridad Informática & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Escalabilidad & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Escalabilidad & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Integración Sistémica & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Integración Sistémica & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \hline
 \multirow{4}{*}{\makecell{Capacidades\\Financieras}} 
-& Liquidez y Solvencia & 5 & 2 & 10 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Liquidez y Solvencia & 5 & 2 & 10 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \cline{2-12}
-& Rentabilidad & 4 & 1 & 4 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \multicolumn{1}{c|}{} & \\
+& Rentabilidad & 4 & 1 & 4 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \multicolumn{1}{c|}{} & \\
 \cline{2-12}
-& Acceso a Financiamiento & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Acceso a Financiamiento & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Gestión de Riesgos & 4 & -1 & -4 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \\
+& Gestión de Riesgos & 4 & -1 & -4 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \\
 \hline
 \multirow{4}{*}{\makecell{Procesos\\Operativos}} 
-& Eficiencia Operacional & 5 & 2 & 10 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Eficiencia Operacional & 5 & 2 & 10 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \cline{2-12}
-& Calidad del Servicio & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Calidad del Servicio & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Gestión de Riesgos Op. & 4 & 1 & 4 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \multicolumn{1}{c|}{} & \\
+& Gestión de Riesgos Op. & 4 & 1 & 4 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \multicolumn{1}{c|}{} & \\
 \cline{2-12}
-& Optimización Costos & 3 & 0 & 0 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \\
+& Optimización Costos & 3 & 0 & 0 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \\
 \hline
 \multirow{4}{*}{\makecell{Marketing\\y Ventas}} 
-& Participación de Mercado & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Participación de Mercado & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Satisfacción del Cliente & 5 & 2 & 10 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Satisfacción del Cliente & 5 & 2 & 10 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \cline{2-12}
-& Efectividad Digital & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Efectividad Digital & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \cline{2-12}
-& Fortaleza de Marca & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Fortaleza de Marca & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \hline
 \multirow{3}{*}{\makecell{Gestión de\\Proveedores}} 
-& Calidad Proveedores & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Calidad Proveedores & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \cline{2-12}
-& Relaciones Estratégicas & 3 & 1 & 3 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \multicolumn{1}{c|}{} & \\
+& Relaciones Estratégicas & 3 & 1 & 3 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \multicolumn{1}{c|}{} & \\
 \cline{2-12}
-& Gestión de Costos & 4 & 1 & 4 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \multicolumn{1}{c|}{} & \\
+& Gestión de Costos & 4 & 1 & 4 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \multicolumn{1}{c|}{} & \\
 \hline
 \multirow{4}{*}{\makecell{Innovación\\y Desarrollo}} 
-& Capacidad de Innovación & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Capacidad de Innovación & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Inversión en I+D & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Inversión en I+D & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Proyectos Innovación & 4 & 3 & 12 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Proyectos Innovación & 4 & 3 & 12 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Velocidad Time-to-Market & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Velocidad Time-to-Market & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \hline
 \multirow{4}{*}{\makecell{Relación\\con Clientes}} 
-& Programas Fidelización & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Programas Fidelización & 4 & 2 & 8 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \cline{2-12}
-& Calidad de Soporte & 5 & 2 & 10 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{o} & \\
+& Calidad de Soporte & 5 & 2 & 10 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{\textbullet} & \\
 \cline{2-12}
-& Gestión de Feedback & 4 & 3 & 12 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Gestión de Feedback & 4 & 3 & 12 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \cline{2-12}
-& Personalización UX & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & o \\
+& Personalización UX & 5 & 3 & 15 & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \multicolumn{1}{c|}{} & \textbullet \\
 \hline
-\caption{Matriz PCI -- Perfil de Capacidad Interna MercadoLibre}
+\caption{Matriz PCI -- Evaluación de Capacidades Internas de MercadoLibre}
 \label{tab:matriz_pci}
 \end{longtable}
+\normalsize
 
 La Tabla \ref{tab:matriz_pci} presenta la evaluación detallada de todas las variables consideradas en el análisis PCI, permitiendo identificar las fortalezas y debilidades organizacionales de MercadoLibre.
 
-\subsection{Resultados Consolidados por Unidad de Análisis}
+\subsubsection{Resultados de la Evaluación PCI}
 
 \begin{table}[H]
 \centering
@@ -240,9 +287,9 @@ Gestión de Proveedores & +15 & Fortaleza Minor \\
 
 La Tabla \ref{tab:resultados_pci} consolida los resultados ponderados por cada unidad de análisis, mostrando que MercadoLibre posee fortalezas distintivas en las áreas críticas para su modelo de negocio.
 
-\subsection{Identificación de Fortalezas y Debilidades}
+\subsubsection{Análisis e Interpretación de Resultados PCI}
 
-\subsubsection{Principales Fortalezas Identificadas}
+\paragraph{Principales Fortalezas Identificadas}
 
 \begin{enumerate}
 \item \textbf{Tecnología y Sistemas (Ponderada: +53)}: La infraestructura tecnológica de MercadoLibre constituye su ventaja competitiva más robusta, con altos niveles de automatización, seguridad informática avanzada y escalabilidad demostrada para soportar millones de transacciones diarias.
@@ -256,7 +303,7 @@ La Tabla \ref{tab:resultados_pci} consolida los resultados ponderados por cada u
 \item \textbf{Relación con Clientes (Ponderada: +45)}: La personalización de la experiencia del usuario y los sistemas avanzados de gestión de feedback contribuyen a tasas superiores de retención de clientes.
 \end{enumerate}
 
-\subsubsection{Áreas de Mejora Identificadas}
+\paragraph{Áreas de Mejora Identificadas}
 
 \begin{enumerate}
 \item \textbf{Gestión de Riesgos Financieros (Ponderada: $-4$)}: La exposición a volatilidad cambiaria y riesgos crediticios en operaciones de Mercado Pago requiere fortalecimiento en modelos de gestión de riesgos.
@@ -266,7 +313,7 @@ La Tabla \ref{tab:resultados_pci} consolida los resultados ponderados por cada u
 \item \textbf{Gestión de Proveedores (Ponderada: +15)}: Aunque funcional, la gestión de la cadena de suministro y relaciones con vendedores presenta oportunidades de optimización y mayor integración estratégica.
 \end{enumerate}
 
-\subsection{Conclusiones del Análisis PCI}
+\paragraph{Síntesis del Análisis PCI}
 
 El Perfil de Capacidad Interna revela que MercadoLibre posee fortalezas distintivas en las áreas críticas para su modelo de negocio: tecnología, innovación, recursos humanos y marketing. Estas fortalezas están alineadas con las demandas del entorno competitivo y representan capacidades difíciles de replicar.
 
